Wired up top navigation to MegaNav

--- a/TestSite/uSync/v8/ContentTypes/home.config
+++ b/TestSite/uSync/v8/ContentTypes/home.config
@@ -21,6 +21,7 @@
     <ContentType Key="0a2d40c4-8299-451b-ad81-9535bc77e99c" SortOrder="2">contentPage</ContentType>
     <ContentType Key="43b654d2-bc23-49a5-8751-31cc9584511e" SortOrder="3">people</ContentType>
     <ContentType Key="8196f390-0f22-47df-b6e1-0e4dc5015f6d" SortOrder="4">products</ContentType>
+    <ContentType Key="5fcb8168-2dc6-4689-9f15-720c784d334d" SortOrder="5">mainNavigation</ContentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
