Added support for querystrings

--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -20,7 +20,18 @@
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
     "name": "Home",
     "url": "/",
-    "children": [],
+    "children": [
+      {
+        "id": 1106,
+        "udi": "umb://document/df1eb830411b4d41a3433917b76d533c",
+        "name": "Tattoo",
+        "url": "/products/tattoo/",
+        "children": [],
+        "icon": "icon-sweatshirt color-black",
+        "published": true,
+        "naviHide": false
+      }
+    ],
     "icon": "icon-home color-black",
     "published": true,
     "naviHide": false
@@ -74,6 +85,12 @@
     "icon": "icon-map-location color-black",
     "published": true,
     "naviHide": false
+  },
+  {
+    "url": "http://www.google.com/#test-anchor2",
+    "children": [],
+    "icon": "icon-link",
+    "queryString": "#testanchor"
   }
 ]]]></Value>
     </megaNav>
