Renamed to MeganavV8
To stop confusion with the original Meganav

--- a/TestSite/uSync/v8/ContentTypes/mainnavigation.config
+++ b/TestSite/uSync/v8/ContentTypes/mainnavigation.config
@@ -16,11 +16,11 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>b1e60975-b486-43ad-8048-102182489f08</Key>
-      <Name>Mega Nav</Name>
-      <Alias>megaNav</Alias>
-      <Definition>de3cf788-a992-4839-b721-f0b45c213f6c</Definition>
-      <Type>Our.Umbraco.Meganav</Type>
+      <Key>67ac75bf-5cc6-444a-9885-7f488cbd5c12</Key>
+      <Name>MegaNav V8</Name>
+      <Alias>megaNavV8</Alias>
+      <Definition>da7b1ecf-1598-4d36-b533-a343979ff69b</Definition>
+      <Type>Our.Umbraco.MeganavV8</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
