--- a/TestSite/TestSite.vbproj
+++ b/TestSite/TestSite.vbproj
@@ -315,12 +315,12 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Plugins\Meganav\Css\editor.css" />
-    <Content Include="App_Plugins\Meganav\Js\angular-ui-tree.js" />
-    <Content Include="App_Plugins\Meganav\Js\meganav.controller.js" />
-    <Content Include="App_Plugins\Meganav\Js\meganav.resource.js" />
-    <Content Include="App_Plugins\Meganav\Views\editor.html" />
-    <Content Include="App_Plugins\Meganav\Views\settings.html" />
+    <Content Include="App_Plugins\MeganavV8\Css\editor.css" />
+    <Content Include="App_Plugins\MeganavV8\Js\angular-ui-tree.js" />
+    <Content Include="App_Plugins\MeganavV8\Js\meganavv8.controller.js" />
+    <Content Include="App_Plugins\MeganavV8\Js\meganavv8.resource.js" />
+    <Content Include="App_Plugins\MeganavV8\Views\editor.html" />
+    <Content Include="App_Plugins\MeganavV8\Views\settings.html" />
     <Content Include="App_Plugins\uSync8\backoffice\uSync8\dashboard.html" />
     <Content Include="App_Plugins\uSync8\backoffice\uSync8\uSyncDashboardController.js" />
     <Content Include="App_Plugins\uSync8\changeDialog.html" />
@@ -408,8 +408,8 @@
     <Content Include="config\uSync8.config" />
     <Content Include="App_Plugins\uSync8\package.manifest" />
     <Content Include="App_Plugins\uSync8\addons.json" />
-    <Content Include="App_Plugins\Meganav\Css\editor.less" />
-    <Content Include="App_Plugins\Meganav\package.manifest" />
+    <Content Include="App_Plugins\MeganavV8\Css\editor.less" />
+    <Content Include="App_Plugins\MeganavV8\package.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -438,9 +438,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Umbraco.MegaNav\Our.Umbraco.Meganav.csproj">
-      <Project>{238cca7f-11cf-4650-ba27-5200f1b667a9}</Project>
-      <Name>Our.Umbraco.Meganav</Name>
+    <ProjectReference Include="..\src\Umbraco.MegaNavV8\Our.Umbraco.MeganavV8.csproj">
+      <Project>{0da22cd4-0573-4010-8449-c4d1fde34db9}</Project>
+      <Name>Our.Umbraco.MeganavV8</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
