Fixed null exception

--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -13,25 +13,14 @@
     <Template />
   </Info>
   <Properties>
-    <megaNav>
+    <megaNavV8>
       <Value><![CDATA[[
   {
     "id": 1104,
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
     "name": "Home",
     "url": "/",
-    "children": [
-      {
-        "id": 1106,
-        "udi": "umb://document/df1eb830411b4d41a3433917b76d533c",
-        "name": "Tattoo",
-        "url": "/products/tattoo/",
-        "children": [],
-        "icon": "icon-sweatshirt color-black",
-        "published": true,
-        "naviHide": false
-      }
-    ],
+    "children": [],
     "icon": "icon-home color-black",
     "published": true,
     "naviHide": false
@@ -61,7 +50,18 @@
     "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
     "name": "About Us",
     "url": "/about-us/",
-    "children": [],
+    "children": [
+      {
+        "id": 1121,
+        "udi": "umb://document/ee82cba3a0e740639ae13026a4f72a3d",
+        "name": "About this Starter Kit",
+        "url": "/about-us/about-this-starter-kit/",
+        "children": [],
+        "icon": "icon-document",
+        "published": true,
+        "naviHide": false
+      }
+    ],
     "icon": "icon-document",
     "published": true,
     "naviHide": false
@@ -85,14 +85,8 @@
     "icon": "icon-map-location color-black",
     "published": true,
     "naviHide": false
-  },
-  {
-    "url": "http://www.google.com/#test-anchor2",
-    "children": [],
-    "icon": "icon-link",
-    "queryString": "#testanchor"
   }
 ]]]></Value>
-    </megaNav>
+    </megaNavV8>
   </Properties>
 </Content>
