Added test anchor link

--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -85,6 +85,14 @@
     "icon": "icon-map-location color-black",
     "published": true,
     "naviHide": false
+  },
+  {
+    "title": "Google",
+    "target": "_blank",
+    "queryString": "#test-anchor",
+    "url": "https://www.google.com#test-anchor",
+    "children": [],
+    "icon": "icon-link"
   }
 ]]]></Value>
     </megaNavV8>
