--- a/TestSite/TestSite.vbproj
+++ b/TestSite/TestSite.vbproj
@@ -438,9 +438,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Umbraco.MegaNavV8\Our.Umbraco.MeganavV8.csproj">
-      <Project>{0da22cd4-0573-4010-8449-c4d1fde34db9}</Project>
-      <Name>Our.Umbraco.MeganavV8</Name>
+    <ProjectReference Include="..\src\Our.Umbraco.MeganavV8.Core\Our.Umbraco.MeganavV8.Core.csproj">
+      <Project>{0729472f-155f-4a11-b30d-67d77eb225f3}</Project>
+      <Name>Our.Umbraco.MeganavV8.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\Our.Umbraco.MeganavV8.Web\Our.Umbraco.MeganavV8.Web.csproj">
+      <Project>{cd05d171-8c1b-45fc-b177-0ab992f2518b}</Project>
+      <Name>Our.Umbraco.MeganavV8.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
