Corrected DLL in Api package

--- a/Builds/NuGet/Umbraco.MegaNavV8.Api.nuspec
+++ b/Builds/NuGet/Umbraco.MegaNavV8.Api.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>AaronSadler.MegaNavV8.Api</id>
-    <version>8.0.8</version>
+    <version>8.0.9</version>
     <title>Umbraco.MegaNavV8.Api</title>
     <authors>Aaron Sadler, Callum Whyte</authors>
     <owners>Aaron Sadler, Callum Whyte</owners>
@@ -12,7 +12,7 @@
     <icon>MegaNavV8-Logo.png</icon>
     <summary>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</summary>
     <description>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</description>
-    <releaseNotes><![CDATA[8.0.8 Split api into seperate package]]></releaseNotes>
+    <releaseNotes><![CDATA[8.0.9 Correctec included Api DLL]]></releaseNotes>
     <copyright>Copyright 2020</copyright>
     <tags>umbraco, umbraco-cms, MegaNav, MegaNav-V8</tags>
 	<dependencies>
@@ -24,7 +24,7 @@
     </dependencies>
   </metadata>
       <files>
-	  <file src="..\..\src\Our.Umbraco.MeganavV8.Core\bin\Release\net472\Our.Umbraco.MeganavV8.Core.dll" target="lib\net472" />
+	  <file src="..\..\src\Our.Umbraco.MeganavV8.Api\bin\Release\Our.Umbraco.MeganavV8.Api.dll" target="lib\net472" />
       <file src="..\MegaNavV8-Logo.png"/>
     </files>
 </package>
