--- a/Builds/NuGet/Umbraco.MegaNavV8.Api.nuspec
+++ b/Builds/NuGet/Umbraco.MegaNavV8.Api.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>AaronSadler.MegaNavV8.Api</id>
-    <version>8.0.9</version>
+    <version>8.0.10</version>
     <title>Umbraco.MegaNavV8.Api</title>
     <authors>Aaron Sadler, Callum Whyte</authors>
     <owners>Aaron Sadler, Callum Whyte</owners>
@@ -12,14 +12,14 @@
     <icon>MegaNavV8-Logo.png</icon>
     <summary>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</summary>
     <description>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</description>
-    <releaseNotes><![CDATA[8.0.9 Correctec included Api DLL]]></releaseNotes>
+    <releaseNotes><![CDATA[Refactored slightly]]></releaseNotes>
     <copyright>Copyright 2020</copyright>
     <tags>umbraco, umbraco-cms, MegaNav, MegaNav-V8</tags>
 	<dependencies>
 	  <group targetFramework=".NETFramework4.7.2">
 		  <dependency id="UmbracoCms.Web" version="8.4.0" />
 		  <dependency id="UmbracoCms.Core" version="8.4.0" />
-		  <dependency id="AaronSadler.MegaNavV8.Core" version="8.0.8" />
+		  <dependency id="AaronSadler.MegaNavV8.Core" version="8.0.9" />
 	  </group>
     </dependencies>
   </metadata>
