Fixed exception caused by incorrect type

--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -16,7 +16,7 @@
     <megaNavV8>
       <Value><![CDATA[[
   {
-    "id": 1104,
+    "id": 1123,
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
     "name": "Home",
     "url": "/",
@@ -26,17 +26,17 @@
     "naviHide": false
   },
   {
-    "id": 1105,
+    "id": 1129,
     "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
-    "name": "Products",
-    "url": "/products/",
+    "name": "Products2",
+    "url": "/products2/",
     "children": [],
     "icon": "icon-shopping-basket color-black",
     "published": true,
     "naviHide": false
   },
   {
-    "id": 1114,
+    "id": 1128,
     "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
     "name": "People",
     "url": "/people/",
@@ -46,13 +46,13 @@
     "naviHide": false
   },
   {
-    "id": 1120,
+    "id": 1124,
     "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
     "name": "About Us",
     "url": "/about-us/",
     "children": [
       {
-        "id": 1121,
+        "id": 1130,
         "udi": "umb://document/ee82cba3a0e740639ae13026a4f72a3d",
         "name": "About this Starter Kit",
         "url": "/about-us/about-this-starter-kit/",
@@ -64,10 +64,11 @@
     ],
     "icon": "icon-document",
     "published": true,
-    "naviHide": false
+    "naviHide": false,
+    "collapsed": false
   },
   {
-    "id": 1123,
+    "id": 1125,
     "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
     "name": "Blog",
     "url": "/blog/",
@@ -77,7 +78,7 @@
     "naviHide": false
   },
   {
-    "id": 1127,
+    "id": 1126,
     "udi": "umb://document/4a1f4198e14348baa0f51a7ef2df23aa",
     "name": "Contact",
     "url": "/contact/",
