--- a/Builds/NuGet/Umbraco.MegaNavV8.Web.nuspec
+++ b/Builds/NuGet/Umbraco.MegaNavV8.Web.nuspec
@@ -12,11 +12,11 @@
     <icon>MegaNavV8-Logo.png</icon>
     <summary>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</summary>
     <description>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</description>
-    <releaseNotes><![CDATA[Added support for Umbraco Deploy to transfer dependent nodes between environments, added the ability to collapse / expand tree items]]></releaseNotes>
+    <releaseNotes><![CDATA[Fixed exception caused by incorrect type in value converter]]></releaseNotes>
     <copyright>Copyright 2020</copyright>
     <tags>umbraco, umbraco-cms, MegaNav, MegaNav-V8</tags>
 	<dependencies>
-	  <dependency id="AaronSadler.MegaNavV8.Core" version="8.0.9" />
+	  <dependency id="AaronSadler.MegaNavV8.Core" version="8.0.10" />
 	  <dependency id="AaronSadler.MegaNavV8.Api" version="8.0.10" />
     </dependencies>
   </metadata>
