--- a/TestSite/uSync/v8/Content/about-us.config
+++ b/TestSite/uSync/v8/Content/about-us.config
@@ -6,15 +6,21 @@
     <Trashed>false</Trashed>
     <ContentType>contentPage</ContentType>
     <CreateDate>2020-05-31T11:20:38</CreateDate>
-    <NodeName Default="About Us" />
+    <NodeName Default="About Us">
+      <Name Culture="en-us">About Us</Name>
+      <Name Culture="en-gb">About Us GB</Name>
+    </NodeName>
     <SortOrder>2</SortOrder>
-    <Published Default="true" />
+    <Published Default="true">
+      <Published Culture="en-gb">true</Published>
+      <Published Culture="en-us">true</Published>
+    </Published>
     <Schedule />
     <Template Key="fa0feea0-81a4-4450-b8dc-692f3a0bcad5">contentPage</Template>
   </Info>
   <Properties>
     <bodyText>
-      <Value><![CDATA[{
+      <Value Culture="en-us"><![CDATA[{
   "name": "1 column layout",
   "sections": [
     {
@@ -100,12 +106,22 @@
     }
   ]
 }]]></Value>
+      <Value Culture="en-gb"><![CDATA[{
+  "name": "1 column layout",
+  "sections": [
+    {
+      "grid": "12",
+      "rows": []
+    }
+  ]
+}]]></Value>
     </bodyText>
     <keywords>
       <Value><![CDATA[[]]]></Value>
     </keywords>
     <pageTitle>
-      <Value><![CDATA[About Us]]></Value>
+      <Value Culture="en-us"><![CDATA[About Us]]></Value>
+      <Value Culture="en-gb"><![CDATA[About Us]]></Value>
     </pageTitle>
     <seoMetaDescription>
       <Value><![CDATA[]]></Value>
