--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -6,15 +6,21 @@
     <Trashed>false</Trashed>
     <ContentType>mainNavigation</ContentType>
     <CreateDate>2020-05-31T11:47:51</CreateDate>
-    <NodeName Default="Main Navigation" />
+    <NodeName Default="Main Navigation">
+      <Name Culture="en-us">Main Navigation</Name>
+      <Name Culture="en-gb">Main Navigation</Name>
+    </NodeName>
     <SortOrder>5</SortOrder>
-    <Published Default="true" />
+    <Published Default="true">
+      <Published Culture="en-gb">true</Published>
+      <Published Culture="en-us">true</Published>
+    </Published>
     <Schedule />
     <Template />
   </Info>
   <Properties>
     <megaNavV8>
-      <Value><![CDATA[[
+      <Value Culture="en-us"><![CDATA[[
   {
     "id": 1123,
     "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
@@ -22,16 +28,6 @@
     "url": "/",
     "children": [],
     "icon": "icon-home color-black",
-    "published": true,
-    "naviHide": false
-  },
-  {
-    "id": 1129,
-    "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
-    "name": "Products2",
-    "url": "/products2/",
-    "children": [],
-    "icon": "icon-shopping-basket color-black",
     "published": true,
     "naviHide": false
   },
@@ -88,12 +84,34 @@
     "naviHide": false
   },
   {
+    "id": 1129,
+    "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
+    "name": "Products",
+    "url": "/products/",
+    "children": [],
+    "icon": "icon-shopping-basket color-black",
+    "published": true,
+    "naviHide": false
+  },
+  {
     "title": "Google",
     "target": "_blank",
     "queryString": "#test-anchor",
     "url": "https://www.google.com#test-anchor",
     "children": [],
     "icon": "icon-link"
+  }
+]]]></Value>
+      <Value Culture="en-gb"><![CDATA[[
+  {
+    "id": 1124,
+    "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
+    "name": "About Us",
+    "url": "/en-us/about-us/",
+    "children": [],
+    "icon": "icon-document",
+    "published": true,
+    "naviHide": false
   }
 ]]]></Value>
     </megaNavV8>
