--- a/TestSite/uSync/v8/ContentTypes/contentpage.config
+++ b/TestSite/uSync/v8/ContentTypes/contentpage.config
@@ -7,7 +7,7 @@
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
+    <Variations>Culture</Variations>
     <IsElement>false</IsElement>
     <Compositions>
       <Composition Key="3abbcdc2-f6bb-47ea-a5a6-35fdf1b3ef46">contentBase</Composition>
@@ -21,6 +21,38 @@
   <Structure>
     <ContentType Key="0a2d40c4-8299-451b-ad81-9535bc77e99c" SortOrder="0">contentPage</ContentType>
   </Structure>
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>fc6f04fe-8295-4f39-80ce-4c5fbb28638a</Key>
+      <Name>Content Picker</Name>
+      <Alias>contentPicker</Alias>
+      <Definition>217ea1ac-1eb0-456a-b369-3ae46d7d9550</Definition>
+      <Type>Umbraco.ContentPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab>Content</Tab>
+      <Variations>Culture</Variations>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>0c70c0c1-b3c3-4295-ab71-f2f43ab41002</Key>
+      <Name>Multi Url Picker</Name>
+      <Alias>multiUrlPicker</Alias>
+      <Definition>72177d11-7550-4356-9ef9-7b955b36f1d1</Definition>
+      <Type>Umbraco.MultiUrlPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab>Content</Tab>
+      <Variations>Culture</Variations>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Caption>Content</Caption>
+      <SortOrder>0</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
