--- a/TestSite/uSync/v8/ContentTypes/mainnavigation.config
+++ b/TestSite/uSync/v8/ContentTypes/mainnavigation.config
@@ -7,7 +7,7 @@
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
+    <Variations>Culture</Variations>
     <IsElement>false</IsElement>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
@@ -26,7 +26,7 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
       <Tab>Main Navigation</Tab>
-      <Variations>Nothing</Variations>
+      <Variations>Culture</Variations>
     </GenericProperty>
   </GenericProperties>
   <Tabs>
